adjust the blog structure
T-BD-1

Signed-off-by: Jeff-Duan <1191837698@qq.com>

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -62,7 +62,7 @@
   <meta name="twitter:card" content="summary{% if image %}_large_image{% endif %}" />
 
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,400italic,700&amp;subset=latin,latin-ext" />
-  <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/static/css/style.css" | prepend: site.baseurl }}">
 
   <link rel="canonical" href="{{ url }}">
 
