--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:url('/fonts/icomoon.eot?qjkdd3');
-  src:url('/fonts/icomoon.eot?qjkdd3#iefix') format('embedded-opentype'),
-    url('/fonts/icomoon.ttf?qjkdd3') format('truetype'),
-    url('/fonts/icomoon.woff?qjkdd3') format('woff'),
-    url('/fonts/icomoon.svg?qjkdd3#icomoon') format('svg');
+  src:url('/static/fonts/icomoon.eot?qjkdd3');
+  src:url('/static/fonts/icomoon.eot?qjkdd3#iefix') format('embedded-opentype'),
+    url('/static/fonts/icomoon.ttf?qjkdd3') format('truetype'),
+    url('/static/fonts/icomoon.woff?qjkdd3') format('woff'),
+    url('/static/fonts/icomoon.svg?qjkdd3#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
