--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   <footer class="site-footer">
     <div class="container">
       {% include footer-links.html %}
-      <a class="license" rel="license" title="Some Rights Reserved — Creative Commons License" href="https://github.com/jasonrudolph/jasonrudolph.com/blob/master/README.md#license">
+      <a class="license" rel="license" title="Some Rights Reserved — Creative Commons License" href="https://github.com/Jeff-Duan/Jeff-Duan.github.io/blob/master/README.md">
         <span class="icon-cc"></span>
         {{ site.time | date: "%Y" }}
       </a>
