--- a/_includes/head.html
+++ b/_includes/head.html
@@ -63,7 +63,7 @@
 
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,400italic,700&amp;subset=latin,latin-ext" />
   <link rel="stylesheet" href="{{ "/static/css/style.css" | prepend: site.baseurl }}">
-
+  <link rel="shortcut icon" href="/static/images/favicon.ico">
   <link rel="canonical" href="{{ url }}">
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
